优化@QFields和@QField在统一字段出现时得条件逻辑